# src/routes/index.js
@@ -1,9 +1,13 @@
 import { Router } from 'express';
 import authRoutes from './auth.routes.js';
+import breedRoutes from './breed.routes.js';
+import petRoutes from './pet.routes.js';
 
 const router = Router();
 
-// Mount auth routes under /auth prefix
+// Mount routes
 router.use('/auth', authRoutes);
+router.use('/breeds', breedRoutes);
+router.use('/pets', petRoutes);
 
 export default router;
